Add Intelligent Campaign Management System and AI-powered DM tools
- Implement comprehensive campaign management with story arcs, session memories, and plot threads
- Add AI-powered story arc generator that creates interconnected narratives
- Create automated session recap generator for 'Previously on...' summaries
- Build foreshadowing engine to subtly weave future plot elements
- Add campaign timeline tracking with chronological event management
- Implement NPC relationship tracking system
- Create DM Assistant with AI-powered NPC dialogue, location descriptions, and combat narration
- Add Encounter Builder with dynamic encounter generation and tactical suggestions
- Implement custom race and class generators with AI validation
- Add comprehensive frontend components for all new features
- Integrate all systems with existing game session infrastructure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       - DB_PASSWORD=dndgamepass
       - DB_NAME=dndgame
       - DB_SSLMODE=disable
+      - JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+      - AI_PROVIDER=openrouter
+      - AI_API_KEY=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
+      - AI_MODEL=openai/gpt-4-turbo
     volumes:
       - ./backend:/app/backend
       - ./data:/app/data
