--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.1",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "html-webpack-plugin": "^5.5.3",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
-    "babel-loader": "^9.1.3",
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.23.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
