--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
