--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ yarn-error.log*
 # Frontend build
 /frontend/build/
 /frontend/dist/
+/frontend/bundle-report.html
 
 # Environment variables
 .env
