--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "description": "D&D Game Frontend",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "test": "jest"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "build:analyze": "ANALYZE=true npm run build",
+    "test": "jest",
+    "serve:build": "npx serve -s build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -23,16 +25,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^11.1.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.14",
     "ts-loader": "^9.5.2",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^6.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
   }
 }
