--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
@@ -39,19 +42,21 @@
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.11",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "compression-webpack-plugin": "^11.1.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
+    "playwright": "^1.52.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.14",
     "ts-loader": "^9.5.2",
