chore(deps): Update dependencies and Dependabot configuration
chore(deps): Update dependencies and Dependabot configuration

This commit addresses several outstanding dependency updates and refines
the Dependabot configuration for better management.

Key changes include:

- GitHub Actions:
  - Updated docker/build-push-action to v6 in ci.yml.
  - Updated golangci/golangci-lint-action to v6 in ci.yml.

- Go Dependencies:
  - Bumped github.com/rs/cors to v1.11.0 in go.mod and go.sum.

- Frontend Dockerfile:
  - Updated Node.js base image from 18-alpine to 24-alpine.

- Frontend NPM Dependencies:
  - Updated webpack-dev-server to ^5.2.2.
  - Updated babel-loader to ^10.0.0.
  - Updated @babel/core to ^7.27.4.
  - Updated style-loader to ^4.0.0.
  - Updated @types/react-dom to ^19.1.6.
  - Updated react-router-dom to ^7.6.2.
  - Updated webpack-cli to ^6.0.1.
  - Updated css-loader to ^7.1.2.
  - Updated package-lock.json accordingly.

- Dependabot Configuration (.github/dependabot.yml):
  - Enabled automerge: true for the npm ecosystem.
  - Added groups for webpack-stack, babel-stack, and react-stack.
  - Corrected gomod package ecosystem directory to /.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
   # Backend Go dependencies
   - package-ecosystem: "gomod"
-    directory: "/backend"
+    directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
@@ -31,6 +31,27 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+    automerge: true
+    groups:
+      webpack-stack:
+        patterns:
+          - "webpack"
+          - "webpack-cli"
+          - "webpack-dev-server"
+          - "*-loader"
+          - "html-webpack-plugin"
+      babel-stack:
+        patterns:
+          - "@babel/*"
+          - "babel-plugin-*"
+          - "babel-preset-*"
+      react-stack:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "react-router-dom"
+          - "@types/react"
+          - "@types/react-dom"
     ignore:
       # Ignore major version updates for critical dependencies
       - dependency-name: "react"
