fix: resolve frontend npm ci issues in CI/CD pipeline
- Added .npmrc file with legacy-peer-deps configuration
- Removed --legacy-peer-deps flag from CI workflow
- This centralizes the peer dependency handling configuration

Fixes CI/CD frontend dependency installation failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci --legacy-peer-deps
+          npm ci
 
       - name: Run ESLint
         run: |
@@ -177,7 +177,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci --legacy-peer-deps
+          npm ci
 
       - name: Run tests
         run: |
