fix: update golangci-lint to v1.62.2 and fix typecheck linter error
- Pin golangci-lint version to v1.62.2 in GitHub Actions
- Remove explicit typecheck linter (built-in for modern versions)
- Remove outdated version directive from .golangci.yml
- Add test script for local golangci-lint verification

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -1,5 +1,4 @@
-# golangci-lint v2.x configuration
-version: "2"
+# golangci-lint configuration
 run:
   timeout: 5m
   tests: true
@@ -40,7 +39,6 @@ linters:
     - rowserrcheck
     - staticcheck
     - stylecheck
-    - typecheck
     - unconvert
     - unparam
     - unused
