--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -120,7 +120,7 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v8
       with:
-        version: v1.62.2
+        version: "1.62.2"
         working-directory: backend
         args: --timeout=5m
 
