fix: make golangci-lint config v2.1-compliant

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -6,6 +6,12 @@ run:
   tests: true
   build-tags:
     - integration
+  skip-dirs:
+    - vendor
+    - node_modules
+  skip-files:
+    - ".*_mock.go"
+    - ".*_gen.go"
 
 linters:
   enable:
@@ -47,6 +53,7 @@ linters:
     - goheader
     - nestif
     - revive
+    - shadow  # Enable shadow linter instead of govet.check-shadowing
 
   disable:
     - depguard
@@ -56,134 +63,120 @@ linters:
     - wsl
     - gochecknoglobals
 
-  settings:
-    dupl:
-      threshold: 100
-    exhaustive:
-      default-signifies-exhaustive: false
-    funlen:
-      lines: 100
-      statements: 50
-    goconst:
-      min-len: 2
-      min-occurrences: 2
-    gocritic:
-      enabled-tags:
-        - diagnostic
-        - experimental
-        - opinionated
-        - performance
-        - style
-      disabled-checks:
-        - dupImport
-        - ifElseChain
-        - octalLiteral
-        - whyNoLint
-        - wrapperFunc
-    gocyclo:
-      min-complexity: 15
-    goimports:
-      local-prefixes: github.com/your-username/dnd-game
-    gomnd:
-      checks:
-        - argument
-        - case
-        - condition
-        - return
-      ignored-numbers:
-        - '0'
-        - '1'
-        - '2'
-        - '3'
-        - '10'
-      ignored-files:
-        - 'test'
-      ignored-functions:
-        - 'strconv.ParseInt'
-    govet:
-      check-shadowing: true
-    lll:
-      line-length: 140
-    misspell:
-      locale: US
-    nolintlint:
-      allow-leading-space: true
-      allow-unused: false
-      require-explanation: false
-      require-specific: false
-    prealloc:
-      simple: true
-      range-loops: true
-      for-loops: true
-    revive:
-      rules:
-        - name: blank-imports
-        - name: context-as-argument
-        - name: context-keys-type
-        - name: dot-imports
-        - name: error-return
-        - name: error-strings
-        - name: error-naming
-        - name: if-return
-        - name: increment-decrement
-        - name: var-naming
-        - name: var-declaration
-        - name: package-comments
-        - name: range
-        - name: receiver-naming
-        - name: time-naming
-        - name: unexported-return
-        - name: indent-error-flow
-        - name: errorf
-        - name: empty-block
-        - name: superfluous-else
-        - name: unused-parameter
-        - name: unreachable-code
-        - name: redefines-builtin-id
-
-  # Path and file exclusions
-  exclusions:
-    paths:
-      - vendor
-      - node_modules
-      - ".*_mock.go"
-      - ".*_gen.go"
-    
-    # Use default exclusion presets  
-    presets:
-      - legacy
-    
-    # Custom exclusion rules
+linters-settings:
+  dupl:
+    threshold: 100
+  exhaustive:
+    default-signifies-exhaustive: false
+  funlen:
+    lines: 100
+    statements: 50
+  goconst:
+    min-len: 2
+    min-occurrences: 2
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - experimental
+      - opinionated
+      - performance
+      - style
+    disabled-checks:
+      - dupImport
+      - ifElseChain
+      - octalLiteral
+      - whyNoLint
+      - wrapperFunc
+  gocyclo:
+    min-complexity: 15
+  goimports:
+    local-prefixes: github.com/your-username/dnd-game
+  gomnd:
+    checks:
+      - argument
+      - case
+      - condition
+      - return
+    ignored-numbers:
+      - '0'
+      - '1'
+      - '2'
+      - '3'
+      - '10'
+    ignored-files:
+      - 'test'
+    ignored-functions:
+      - 'strconv.ParseInt'
+  govet:
+    # check-shadowing removed - use shadow linter instead
+  lll:
+    line-length: 140
+  misspell:
+    locale: US
+  nolintlint:
+    # allow-leading-space removed in v1.55+
+    allow-unused: false
+    require-explanation: false
+    require-specific: false
+  prealloc:
+    simple: true
+    range-loops: true
+    for-loops: true
+  revive:
     rules:
-      - path: _test\.go
-        linters:
-          - gomnd
-          - goconst
-          - gosec
-          - noctx
-          - dogsled
-          - bodyclose
-      - path: testing\.go
-        linters:
-          - gosec
-      - path: cmd/
-        linters:
-          - gochecknoinits
-          - gochecknoglobals
-      - path: internal/models/
-        linters:
-          - govet
-      - linters:
-          - lll
-        source: "^//go:generate "
-      - linters:
-          - stylecheck
-        text: "ST1000:"
-      - linters:
-          - revive
-        text: "exported:"
+      - name: blank-imports
+      - name: context-as-argument
+      - name: context-keys-type
+      - name: dot-imports
+      - name: error-return
+      - name: error-strings
+      - name: error-naming
+      - name: if-return
+      - name: increment-decrement
+      - name: var-naming
+      - name: var-declaration
+      - name: package-comments
+      - name: range
+      - name: receiver-naming
+      - name: time-naming
+      - name: unexported-return
+      - name: indent-error-flow
+      - name: errorf
+      - name: empty-block
+      - name: superfluous-else
+      - name: unused-parameter
+      - name: unreachable-code
+      - name: redefines-builtin-id
 
 issues:
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - gomnd
+        - goconst
+        - gosec
+        - noctx
+        - dogsled
+        - bodyclose
+    - path: testing\.go
+      linters:
+        - gosec
+    - path: cmd/
+      linters:
+        - gochecknoinits
+        - gochecknoglobals
+    - path: internal/models/
+      linters:
+        - govet
+    - linters:
+        - lll
+      source: "^//go:generate "
+    - linters:
+        - stylecheck
+      text: "ST1000:"
+    - linters:
+        - revive
+      text: "exported:"
   max-issues-per-linter: 0
   max-same-issues: 0
   new: false
