--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,13 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-tabs": "^6.1.0",
     "redux-persist": "^6.0.0",
     "typescript": "^5.8.3"
   },
