fix: resolve backend lint errors
- Fixed goconst errors by creating constants for repeated strings
  - Added constants.EmptyJSON for "{}" string
  - Added constants.AndGameSessionIDClause and AndCharacterIDClause for SQL fragments
  - Added constants.StatusActive for "active" status

- Fixed gochecknoinits errors by refactoring init functions
  - Replaced init() in websocket handler with InitHub() function
  - Updated main.go to use websocket.InitHub() instead of creating new hub
  - Excluded docs/ from gochecknoinits linter (required for swagger)

- Fixed errcheck errors in game_security_test.go
  - Added error checks for json.Decode operations
  - Added error check for testCtx.Repos.GameSessions.Update

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -152,6 +152,9 @@ issues:
         - noctx
         - dogsled
         - bodyclose
+    - path: docs/
+      linters:
+        - gochecknoinits
     - path: testing\.go
       linters:
         - gosec
