fix: resolve golangci-lint schema validation timeout in CI
The golangci-lint GitHub Action was failing due to network timeouts when
trying to download the JSON schema for configuration validation.

Changes:
1. Updated golangci-lint version from v1.61.0 to v1.62.2
2. Added GOLANGCI_LINT_DISABLE_JSON_SCHEMA_VALIDATION env var
3. Added skip-cache: true to avoid potential cache issues
4. Implemented fallback mechanism that runs golangci-lint directly
5. Added skip-dirs-use-default to .golangci.yml config

This should resolve the "context deadline exceeded" errors in CI/CD
while maintaining proper linting functionality.

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -1,9 +1,12 @@
 # golangci-lint configuration
+# schema: https://golangci-lint.run/jsonschema/golangci.v1.61.jsonschema.json
+# schema validation disabled due to network timeouts in CI
 run:
   timeout: 5m
   tests: true
   build-tags:
     - integration
+  skip-dirs-use-default: true
 
 linters:
   enable:
