--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
   backend-lint:
     name: Backend Lint
     runs-on: ubuntu-latest
+    env:
+      GOLANGCI_LINT_CACHE: /tmp/golangci-lint-cache
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,10 +29,24 @@ jobs:
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
+        id: golangci
+        continue-on-error: true
         with:
-          version: v1.61.0
+          version: v1.62.2
           working-directory: backend
-          args: --timeout=5m
+          args: --timeout=5m --out-format=colored-line-number
+          skip-cache: true
+        env:
+          GOLANGCI_LINT_CACHE: /tmp/golangci-lint-cache
+          GOLANGCI_LINT_DISABLE_JSON_SCHEMA_VALIDATION: "true"
+
+      - name: Run golangci-lint (fallback)
+        if: steps.golangci.outcome == 'failure'
+        run: |
+          cd backend
+          echo "Primary golangci-lint action failed, running fallback..."
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /tmp v1.62.2
+          /tmp/golangci-lint run --timeout=5m --out-format=colored-line-number
 
   backend-test:
     name: Backend Tests
