--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -281,7 +281,7 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
           POSTGRES_DB: dnd_integration
         options: >-
           --health-cmd pg_isready
@@ -330,15 +330,15 @@ jobs:
 
       - name: Run database migrations
         env:
-          DATABASE_URL: postgresql://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/dnd_integration?sslmode=disable
+          DATABASE_URL: postgresql://postgres:${{ secrets.TEST_DB_PASSWORD }}@localhost:5432/dnd_integration?sslmode=disable
         run: |
           cd backend
           go run cmd/server/main.go migrate up
 
       - name: Start backend server
         env:
-          DATABASE_URL: postgresql://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/dnd_integration?sslmode=disable
-          JWT_SECRET: integration-test-secret
+          DATABASE_URL: postgresql://postgres:${{ secrets.TEST_DB_PASSWORD }}@localhost:5432/dnd_integration?sslmode=disable
+          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
           REDIS_URL: redis://localhost:6379
           GO_ENV: test
           PORT: 8080
