--- a/backend/Dockerfile.optimized
+++ b/backend/Dockerfile.optimized
@@ -96,7 +96,7 @@ ENTRYPOINT ["/app/server"]
 FROM golang:1.21-alpine AS development
 
 # Install development tools
-RUN apk add --no-cache git make bash curl vim
+RUN apk add --no-cache bash curl git make vim
 
 # Install air for hot reload
 RUN go install github.com/cosmtrek/air@latest
@@ -128,12 +128,12 @@ FROM alpine:3.19 AS production-debug
 
 # Install runtime dependencies and debug tools
 RUN apk add --no-cache \
+    bind-tools \
     ca-certificates \
     curl \
     htop \
-    procps \
     net-tools \
-    bind-tools \
+    procps \
     && rm -rf /var/cache/apk/*
 
 # Create non-root user
@@ -148,6 +148,9 @@ COPY --from=builder /app/backend/cmd/server/server .
 # Copy static data
 COPY --from=builder /app/data ./data
 
+# Copy healthcheck script
+COPY --from=builder --chmod=755 /app/backend/scripts/healthcheck.sh /usr/local/bin/healthcheck.sh
+
 # Change ownership
 RUN chown -R appuser:appgroup /app
 
@@ -159,7 +162,7 @@ EXPOSE 8080
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
+    CMD ["/usr/local/bin/healthcheck.sh"]
 
 # Run the binary
 CMD ["./server"]
