fix: resolve Docker security hotspots identified by SonarCloud
- Replaced all recursive COPY . . with specific directory copies
- Added non-root user execution in all Node.js Docker stages
- Created comprehensive .dockerignore files for frontend and backend
- Enhanced backend .dockerignore with additional sensitive patterns
- Added security validation script to prevent regressions
- Created DOCKER_SECURITY.md documentation

Security improvements:
- Prevents accidental inclusion of sensitive files (.env, keys, tokens)
- Runs containers as non-root users (defense in depth)
- Explicit file copying reduces attack surface
- Validation script ensures ongoing compliance

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -43,3 +43,65 @@ docker-compose*.yml
 # Scripts (except healthcheck)
 scripts/*
 !scripts/healthcheck.sh
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.backup
+*.bak
+*.old
+
+# Configuration files with secrets
+config/local.*
+config/development.*
+config/*.secret.*
+
+# SSH keys
+id_rsa*
+id_dsa*
+id_ecdsa*
+id_ed25519*
+known_hosts
+
+# AWS credentials
+.aws/
+
+# Google Cloud credentials
+.gcloud/
+*.json
+
+# Azure credentials
+.azure/
+
+# Terraform files
+*.tfstate
+*.tfstate.*
+.terraform/
+
+# Ansible files
+*.retry
+vault.yml
+
+# Any password files
+*password*
+*passwd*
+
+# Token files
+*token*
+*secret*
+
+# Key and certificate files
+*.key
+*.pem
+
+# Node modules (if any frontend code exists)
+node_modules/
+
+# Keep only necessary JSON files
+!package.json
+!tsconfig.json
+!go.mod
+!go.sum
